export interface Material {
    id: string;
    title: string;
    content: string;
    courseId: string;
    createdAt?: Date;
    updatedAt?: Date;
  }